[gd_scene load_steps=22 format=3 uid="uid://yysv0g68tg2x"]

[ext_resource type="Script" uid="uid://c7o1ov0f1f5wy" path="res://components/state_machine/state_machine.gd" id="1_8eijk"]
[ext_resource type="Script" uid="uid://bmu3t5l6qg4vt" path="res://player/player.gd" id="1_g20gq"]
[ext_resource type="Script" uid="uid://dsrdj51ffut2a" path="res://player/player_controller.gd" id="1_wu8e1"]
[ext_resource type="Script" uid="uid://cbp8tfldtdhut" path="res://player/player_state/idle.gd" id="2_gtsfv"]
[ext_resource type="Script" uid="uid://cqcp87mt4kpkr" path="res://player/player_input.gd" id="2_rgyib"]
[ext_resource type="Script" uid="uid://b1yrpp1rep1l7" path="res://player/player_state/move.gd" id="3_gtsfv"]
[ext_resource type="Texture2D" uid="uid://8h8u4t3s87k1" path="res://player/assets/conductor.png" id="7_noxpy"]
[ext_resource type="Texture2D" uid="uid://cpfrelkdicr1u" path="res://player/assets/idle anim.png" id="7_rgyib"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eu8pa"]
radius = 50.0
height = 320.0

[sub_resource type="AtlasTexture" id="AtlasTexture_hg6s5"]
atlas = ExtResource("7_rgyib")
region = Rect2(0, 0, 273, 454)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t03j"]
atlas = ExtResource("7_rgyib")
region = Rect2(273, 0, 273, 454)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ieo8"]
atlas = ExtResource("7_rgyib")
region = Rect2(0, 454, 273, 454)

[sub_resource type="AtlasTexture" id="AtlasTexture_0cf6c"]
atlas = ExtResource("7_noxpy")
region = Rect2(0, 0, 528, 452)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2h1c"]
atlas = ExtResource("7_noxpy")
region = Rect2(528, 0, 528, 452)

[sub_resource type="AtlasTexture" id="AtlasTexture_qh58e"]
atlas = ExtResource("7_noxpy")
region = Rect2(1056, 0, 528, 452)

[sub_resource type="AtlasTexture" id="AtlasTexture_hr31g"]
atlas = ExtResource("7_noxpy")
region = Rect2(0, 452, 528, 452)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqp71"]
atlas = ExtResource("7_noxpy")
region = Rect2(528, 452, 528, 452)

[sub_resource type="AtlasTexture" id="AtlasTexture_vuhga"]
atlas = ExtResource("7_noxpy")
region = Rect2(1056, 452, 528, 452)

[sub_resource type="AtlasTexture" id="AtlasTexture_muf2e"]
atlas = ExtResource("7_noxpy")
region = Rect2(0, 904, 528, 452)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkbv7"]
atlas = ExtResource("7_noxpy")
region = Rect2(528, 904, 528, 452)

[sub_resource type="SpriteFrames" id="SpriteFrames_jo6ux"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hg6s5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t03j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ieo8")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cf6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2h1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qh58e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hr31g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqp71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vuhga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muf2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkbv7")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[node name="Player" type="CharacterBody2D"]
collision_mask = 3
script = ExtResource("1_g20gq")

[node name="PlayerInput" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_rgyib")
metadata/_custom_type_script = "uid://cqcp87mt4kpkr"

[node name="PlayerController" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_wu8e1")
metadata/_custom_type_script = "uid://dsrdj51ffut2a"

[node name="StateMachineComponent" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
unique_name_in_owner = true
script = ExtResource("1_8eijk")
initial_state = NodePath("Idle")
metadata/_custom_type_script = "uid://c7o1ov0f1f5wy"

[node name="Idle" type="Node" parent="StateMachineComponent"]
script = ExtResource("2_gtsfv")

[node name="Move" type="Node" parent="StateMachineComponent"]
script = ExtResource("3_gtsfv")

[node name="State" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -23.0
offset_top = -209.0
offset_right = 17.0
offset_bottom = -186.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_eu8pa")

[node name="VisualRoot" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="VisualRoot"]
unique_name_in_owner = true
position = Vector2(0, -2)
sprite_frames = SubResource("SpriteFrames_jo6ux")
animation = &"idle"
autoplay = "walk"

[node name="FmodListener2D" type="FmodListener2D" parent="."]
